x230 complete initial config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,18 +1,11 @@
-# vim:fileencoding=utf-8:ft=conf
+include colors.conf
 
-# Font family. You can also specify different fonts for the
-# bold/italic/bold-italic variants. By default they are derived automatically,
-# by the OSes font system. Setting them manually is useful for font families
-# that have many weight variants like Book, Medium, Thick, etc. For example:
-# font_family Operator Mono Book
-# bold_font Operator Mono Thick
-# bold_italic_font Operator Mono Medium
-# font_family      Input Mono
-font_family      Iosevka Term
-italic_font      Iosevka Term Italic
-bold_font        Iosevka Term Bold
-bold_italic_font Iosevka Term Bold Italic
+font_family      Iosevka Term Nerd Font Complete Mono
+italic_font      Iosevka Term Italic Nerd Font Complete Mono
+bold_font        Iosevka Term Bold Nerd Font Complete Mono
+bold_italic_font Iosevka Term Bold Italic Nerd Font Complete Mono
 
+# display georgian letters with Dejavu Sans Mono
 symbol_map U+10A0-U+10FF Dejavu Sans Mono
 
 # Font size (in pts)
@@ -20,43 +13,3 @@ font_size        14.0
 
 window_padding_width 4
 macos_hide_titlebar yes
-
-# NORD THEME
-foreground            #D8DEE9
-background            #2E3440
-selection_foreground  #000000
-selection_background  #FFFACD
-url_color             #0087BD
-cursor                #81A1C1
-
-# black
-color0   #3B4252
-color8   #4C566A
-
-# red
-color1   #BF616A
-color9   #BF616A
-
-# green
-color2   #A3BE8C
-color10  #A3BE8C
-
-# yellow
-color3   #EBCB8B
-color11  #EBCB8B
-
-# blue
-color4  #81A1C1
-color12 #81A1C1
-
-# magenta
-color5   #B48EAD
-color13  #B48EAD
-
-# cyan
-color6   #88C0D0
-color14  #8FBCBB
-
-# white
-color7   #E5E9F0
-color15  #ECEFF4
