--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -2,124 +2,133 @@
 ; author: vanir
 
 [colors]
-background = #10101000
-background-alt = #1f1f1f
-foreground = #FFFFFF
-foreground-alt = #FFFFFF
-primary = #ffbf00
-secondary = #ffbf00
-alert = #960018
+bg =     #2e3440
+bg-alt = #1f1f1f
+fg =     #d8dee9
+fg-alt = #d8dee9
 
 [bar/vanir]
 monitor = ${env:MONITOR:}
 width = 100%
 height = 25 
+top = true
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+wm-restack = bspwm
+override-redirect = false
+fixed-center = true
 
-line-size = 3 
-line-color = ${colors.primary}
+enable-ipc = true
 
-border-size = 0 
-border-color = ${colors.primary} 
+background = ${colors.bg}
+foreground = ${colors.fg}
+module-margin-right = 2
+padding-right = 2
 
-padding-left = 0
-padding-right = 1
+font-0 = "Iosevka Nerd Font:pixelsize=12;2"
 
-module-margin-left = 1
-module-margin-right = 0 
-
-bottom = false
-
-font-0 = darkroom_icons:style=Regular:pixelsize=12;1
-font-1 = darkroom_icons:style=Regular:pixelsize=12;1
-font-2 = Iosevka Term:size=11;1
-
-modules-left = i3
-modules-right = xkeyboard alsa date powermenu
-
-tray-position = right
-tray-padding = 2
+modules-left = date
+modules-center = bspwm
+modules-right = xkeyboard volume wlan bat powermenu
 
 cursor-click = pointer
-cursor-scroll = ns-resize
 
-[module/i3]
-type = internal/i3
-format = <label-state> <label-mode>
-index-sort = true
-wrapping-scroll = false
-
-; Only show workspaces on the same output as the bar
-;pin-workspaces = true
-
-label-mode-padding = 2
-label-mode-foreground = #000
-label-mode-background = ${colors.primary}
-
-; focused = Active workspace on focused monitor
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+[module/bspwm]
+type = internal/bspwm
+pin-workspaces = true
+enable-click = true
+fuzzy-match = true
+enable-scroll = false
+label-focused = 
+label-focused-foreground = ${colors.foreground-alt}
 label-focused-padding = 1
-
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
-label-unfocused-padding = 1
-
-; visible = Active workspace on unfocused monitor
-label-visible = %index%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
-
-; urgent = Workspace with urgency hint set
-label-urgent = %index%
-label-urgent-background = ${colors.alert}
+label-occupied = 
+label-occupied-foreground = #99586e75
+label-occupied-padding = 1
+label-urgent = 
+label-urgent-foreground = #F00
 label-urgent-padding = 1
-
+label-empty = 
+label-empty-foreground = ${colors.foreground}
+label-empty-padding = 1
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = scroll lock
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 
 label-layout = %layout%
+label-padding = 2
 
 [module/date]
 type = internal/date
-interval = 1.0
-format = <label>
+interval = 1
 
-time = %H:%M
-label = %date% %time%
+time = "%a, %b %d %H:%M"
 
+format = <label>
+format-foreground = ${colors.fg}
+format-padding = 1
+format-prefix = %{T5}%{T-}
+label = %{T1}%time%%{T-}
 
-[module/alsa]
-type = internal/pulseaudio
+[module/volume]
+type = internal/alsa
+format-volume = <ramp-volume><label-volume>
+format-volume-font = 0  
+label-volume = %percentage%%
+label-muted = "婢"
+label-muted-padding = 2
+ramp-volume-0 = 奄
 
-format-volume = <ramp-volume> <label-volume>
-
-label-volume = %percentage%
-label-volume-foreground = ${colors.foreground}
-
-label-muted = 
-format-muted-padding = 1
-
-ramp-volume-0 = 
-ramp-volume-foreground =  ${colors.foreground}
+[module/bat]
+type = internal/battery
+battery = BAT0
+adapter = ADP1
+full-at = 98
+format-charging =  <label-charging>
+label-charging = %percentage:2%%
+format-charging-padding = 1
+format-charging-foreground = ${colors.foreground}
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging = %percentage%%
+format-discharging-foreground = ${colors.foreground}
+format-full-prefix = "  "
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+ramp-capacity-3 = " "
+ramp-capacity-4 = " "
+ramp-capacity-0-foreground = ${colors.red}
+animation-charging-framerate = 910
+format-discharging-padding = 1
 
 [module/powermenu]
 type = custom/text
 
-click-left = powermenu
-content = %{T4}%{T-}
+click-left = $HOME/.local/bin/powermenu
+content = %{T4}%{T-}
 content-background = ${colors.background}
 content-foreground = ${colors.foreground-alt}
+
+[module/wlan]
+type = internal/network
+interface = wlan0
+interval = 1.0
+
+format-connected = <label-connected>
+format-connected-padding = 1
+label-connected = %{A1:wifimenu:} %essid%%{A}
+label-connected-foreground = ${colors.fg}
+label-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+format-disconnected-padding = 1
+label-disconnected = %{A1:wifimenu:}%{A}
+label-disconnected-foreground = ${colors.shade-1}
+label-disconnected-padding = 1
 
 [settings]
 screenchange-reload = true
@@ -129,4 +138,5 @@ margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
+
 
