updated polybar config

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -16,6 +16,7 @@ top = true
 wm-restack = bspwm
 override-redirect = false
 fixed-center = true
+tray-position = left
 
 enable-ipc = true
 
@@ -115,20 +116,16 @@ content-foreground = ${colors.foreground-alt}
 
 [module/wlan]
 type = internal/network
-interface = wlan0
+interface = wlp3s0
 interval = 1.0
 
 format-connected = <label-connected>
-format-connected-padding = 1
-label-connected = %{A1:wifimenu:} %essid%%{A}
+label-connected = %{A1:wifimenu:}  %essid%%{A}
 label-connected-foreground = ${colors.fg}
-label-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-format-disconnected-padding = 1
-label-disconnected = %{A1:wifimenu:}%{A}
+label-disconnected = %{A1:wifimenu:}睊%{A}
 label-disconnected-foreground = ${colors.shade-1}
-label-disconnected-padding = 1
 
 [settings]
 screenchange-reload = true
