--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -16,14 +16,14 @@ blur-strength = 6;
 
 # Fading
 fading = true;
-fade-delta = 2;
+fade-delta = 3;
 no-fading-openclose = false;
 
 fade-exclude = [ ];
 
 # Other
 mark-wmwin-focused = true;
-mark-ovredir-focused = true;
+mark-ovredir-focused = false;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
